# materials

./: .gitignore  CMakeLists.txt  gui_techlist.cpp  gui_techlist.hpp  gui_techprocess.cpp  gui_techprocess.hpp  main_q.cpp  material_entry.cpp  material_entry.hpp  measurement.cpp  measurement.hpp  operation.cpp  operation.hpp  parser.cpp  parser.hpp  readme.md  techprocess.cpp  techprocess.hpp  techprocess_viewer.cpp  techprocess_viewer.hpp  winico.rc
src/: complex_dependance.cpp  complex_dependance.hpp  gui_techlist.cpp  gui_techlist.hpp  img.qrc  inputnumberqvalidator.cpp  inputnumberqvalidator.hpp  main.cpp  material_entry.cpp  material_entry.hpp  material_viewer.hpp  measurement.cpp  measurement.hpp  operation.cpp  operation.hpp  parser.cpp  parser.hpp  techprocess.cpp  techprocess.hpp  techprocess_viewer.cpp  techprocess_viewer.hpp
test/: main_test.cpp
